Fix z-indexes going over Bootstrap components

--- a/src/sass/components/_tabbar.scss
+++ b/src/sass/components/_tabbar.scss
@@ -8,7 +8,7 @@
     width: 100%;
     display: none;
 
-    z-index: 9998;
+    z-index: $zindex-fixed;
 
     box-shadow: 0 0 2px 0 rgba($black, 0.08), 0 -2px 4px 0 rgba($black, 0.06);
 
